--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -30,9 +30,22 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">ID: 4</li>
             <li class="list-group-item">Email: <a href="mailto:d">d</a></li>
             <li class="list-group-item">Office number: 5</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">d</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 4</li>
+            <li class="list-group-item">Email: <a href="mailto:d">d</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/6" target="_blank" rel="noopener noreferrer">6</a></li>
         </ul>
     </div>
 </div>
